# Software_AI

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.log-analyzer  Dockerfile.runner  README.md  algo_trading_mlops_gcp_pipeline_v2.json  algo_trading_mlops_modular_pipeline_v3.json  algo_trading_mlops_pipeline_v5.json  algo_trading_mlops_pipeline_v5_corrected.json  algo_trading_mlops_pipeline_v5_final.json  app.py  backtest.py  data_fetcher_vertexai.py  data_loader.py  data_orchestrator.py  gitignore  indicators.py  log_analyzer_config.yaml  model_promotion_decision.py  optimize_lstm.py  prepare_opt_data.py  prepare_rl_data.py  pyproject.toml  requirements-analyzer.txt  requirements.txt  run.sh  run_pipeline.ps1  temp_deploy.py  train_lstm.py  train_rl.py  training_pipeline.py  validate_hybrid_flow.py
cloud-run/: log-analyzer-service.yaml
docs/: INTEGRATION_GUIDE.md  Pipeline_v5_error_fix.md
k8s/: log-analyzer-cronjob.yaml  log-analyzer-deployment.yaml
output/: completion_message.txt  output_path.txt
prepared_data_output/: EURUSD_m1_holdout.parquet  holdout_path.txt  train_path.txt
scripts/: create_gcs_bucket.py  deploy_to_gcp.sh  example_integration.py  get_pipeline_job_details.py  run_analyzer_local.sh  run_gcp_training.py  run_local_backtest.sh  run_local_ingestion.sh  run_local_preparation.sh  run_local_promotion.sh  start_log_analyzer.ps1  start_trading_with_monitoring.sh  test_log_analyzer_wait.py  validate_hybrid_flow.sh
src/config/: pipeline_config.py
src/deploy/: cli.py  vertex_ai_runner.py
src/log_analyzer/: __init__.py  (+6 more)
tests/: test_components.py  test_gcs_cleanup.py  test_shared.py
(+34 files in other folders)
